[project]
name = "Qwenvl-Smit"
version = "0.1.0"
description = "ComfyUI custom nodes for local Qwen3-VL and Qwen3.5 image, multi-image, video, OCR, grounding, detection, chat, and structured output workflows."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Qwenvl-Smit contributors" }]
dependencies = [
  "transformers>=4.57.0",
  "accelerate>=1.0.0",
  "huggingface_hub>=0.34.0",
  "qwen-vl-utils[decord]>=0.0.14",
  "pillow>=10.0.0",
  "numpy>=1.26.0",
  "safetensors>=0.4.5",
]

[project.urls]
Homepage = "https://github.com/jiuman994/Qwenvl-Smit"
Repository = "https://github.com/jiuman994/Qwenvl-Smit"

[tool.black]
line-length = 100
